--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "kirim-doa-els",
   "version": "0.1.0",
+  "homepage": "https://InosensiusKareloHesay/kirim-doa-els",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^19.0.0",
