--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kirim-doa-els",
   "version": "0.1.0",
-  "homepage": "https://InosensiusKareloHesay/kirim-doa-els",
+  "homepage": "https://InosensiusKareloHesay.github.io/kirim-doa-els",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -12,19 +12,20 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
+    "gh-pages": "^6.3.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
