--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:dev": "copy next.config.dev.ts next.config.ts && next build",
+    "build:prod": "copy next.config.prod.ts next.config.ts && next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "npm run build && copy public\\.nojekyll out\\",
+    "predeploy": "npm run build:prod && copy public\\.nojekyll out\\",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
